work on the media query

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/mediaquery.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
     integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -394,7 +395,7 @@
 
   </section>
   <section class="course-content">
-    <div class="course-content-item">
+    <div class="course-content-item ">
       <div class="course-item item1">
         <h2>PHP</h2>
         <p>A web server programming language
@@ -409,11 +410,8 @@
       </div>
       <div class="course-item item3">
         <h2>W3.CSS</h2>
-        <p>A CSS framework for faster and better responsive web pages
-
-        </p>
+        <p>A CSS framework for faster and better responsive web pages</p>
         <a href="btn" class="learn-w3">Learn PHP</a>
-
       </div>
       <div class="course-item item4">
         <h2>JQuery</h2>
@@ -428,13 +426,75 @@
       </div>
       <div class="course-item item6">
         <h2>BOOTSTRAP</h2>
-        <p>A CSS framework for designing better web pages
-
-        </p>
+        <p>A CSS framework for designing better web pages</p>
         <a href="btn" class="learn-BTSP">Learn BOOTSTRAP</a>
       </div>
     </div>
+    <!--grid2 -->
+    <div class="course-content-item">
+      <div class="course-item item1">
+        <h2>C</h2>
+      </div>
+      <div class="course-item item4">
+        <h2>C#</h2>
+      </div>
+    </div>
+    <!-- grid4 -->
+    <div class="course-content-item course-grid">
+      <div class="course-item item1">
+        <h2>R</h2>
+      </div>
+      <div class="course-item item4">
+        <h2>Kotlin</h2>
+      </div>      <div class="course-item item1">
+        <h2>Node JS</h2>
+      </div>
+      <div class="course-item item4">
+        <h2>React</h2>
+      </div>
+      <div class="course-item item1">
+        <h2>R</h2>
+      </div>
+      <div class="course-item item4">
+        <h2>Kotlin</h2>
+      </div>      <div class="course-item item1">
+        <h2>Node JS</h2>
+      </div>
+      <div class="course-item item4">
+        <h2>React</h2>
+      </div>
+      <div class="course-item item1">
+        <h2>R</h2>
+      </div>
+      <div class="course-item item4">
+        <h2>Kotlin</h2>
+      </div>      <div class="course-item item1">
+        <h2>Node JS</h2>
+      </div>
+      <div class="course-item item4">
+        <h2>React</h2>
+      </div>
+      </div>
+      <!-- gride 2-2 -->
+      <div class="course-content-item">
+        <div class="course-item item1">
+          <h2>Excel</h2>
+        </div>
+        <div class="course-item item4">
+          <h2>Google Sheets</h2>
+        </div>
+        <div class="course-item item1">
+          <h2>Machine Learning</h2>
+        </div>
+        <div class="course-item item4">
+          <h2>Artificial Intelligence</h2>
+        </div>
+      </div>
 
+  </section>
+  <section class="course-sub">
+    <div>
+    </div>
   </section>
 
   <script>
