work on the media query

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="w3-bar">
       <div class="bar-container">
         <div class="bar-left">
-          <a href="#link address"><img src="/image/logo.png" alt="home"></a>
+          <a href="#link address"><img src="image/logo.png" alt="home"></a>
           <a href="#tutorial" onclick="toggleFun()">Tutorials <i class="fa-solid fa-caret-down"></i></a>
           <a href="#refrences">Refrences</a>
           <a href="#exercises">Exercise</a>
